--- a/proj1/index.html
+++ b/proj1/index.html
@@ -25,7 +25,7 @@
 
 <h1 align="middle">CS 284: Computer Graphics and Imaging, Spring 2022</h1>
 <h1 align="middle">Project 1: Rasterizer</h1>
-<h2 align="middle">Xiao Song, Haohua Lyu, CS284</h2>
+<h2 align="middle">Xiao Song (xiaosx@berkeley.edu), Haohua Lyu(haohua@berkeley.edu)</h2>
 
 <br><br>
 
