--- a/index.html
+++ b/index.html
@@ -1,18 +1,37 @@
-<html>
-	<head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
+<style>
+  body {
+    padding: 100px;
+    width: 1000px;
+    margin: auto;
+    text-align: left;
+    font-weight: 300;
+    font-family: 'Open Sans', sans-serif;
+    color: #121212;
+  }
+  h1, h2, h3, h4 {
+    font-family: 'Source Sans Pro', sans-serif;
+  }
+</style>
+	<title>CS 284 Project Webpage</title>
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Source+Sans+Pro" rel="stylesheet">
 	</head>
 	<body>
-		<h3>CS184/284A Project Webpages</h3>
+		<h1 align="middle">CS184/284A Project Webpages</h1>
+		<h3 align="middle">Xiao Song (xiaosx@berkeley.edu), Haohua Lyu (haohua@berkeley.edu)</h3>
 		<br><br>
-		<a href="/proj1/index.html">Project 1</a>
+		<a align="middle" href="/proj1/index.html">Project 1</a>
 		<br><br>
-		<a href="/proj2/index.html">Project 2</a>
+		<a align="middle" href="/proj2/index.html">Project 2</a>
 		<br><br>
-		<a href="/proj3-1/index.html">Project 3-1</a>
+		<a align="middle" href="/proj3-1/index.html">Project 3-1</a>
 		<br><br>
-		<a href="/proj3-2/index.html">Project 3-2</a>
+		<a align="middle" href="/proj3-2/index.html">Project 3-2</a>
 		<br><br>
-		<a href="/proj4/index.html">Project 4</a>
+		<a align="middle" href="/proj4/index.html">Project 4</a>
 	</body>
 	<script>
 		var links = document.body.getElementsByTagName("a")
@@ -25,3 +44,4 @@
 		}
 	</script>
 </html>
+
