--- a/proj1/index.html
+++ b/proj1/index.html
@@ -31,6 +31,8 @@
 
 <div>
 
+  <a href="../index.html"><p align="middle">Back to Homepage</p></a>
+
 <h2 align="middle">Overview</h2>
 <p>Give a high-level overview of what you implemented in this project. Think about what you've built as a whole. Share your thoughts on what interesting things you've learned from completing the project.</p>
 
