--- a/proj1/index.html
+++ b/proj1/index.html
@@ -27,13 +27,13 @@
 
 <h1 align="middle">CS 284: Computer Graphics and Imaging, Spring 2022</h1>
 <h1 align="middle">Project 1: Rasterizer</h1>
-<h2 align="middle">Xiao Song (xiaosx@berkeley.edu), Haohua Lyu(haohua@berkeley.edu)</h2>
+<h2 align="middle">Xiao Song (xiaosx@berkeley.edu), Haohua Lyu (haohua@berkeley.edu)</h2>
 
 <br><br>
 
 <div>
 
-  <a href="../index.html"><p align="middle">Back to Homepage</p></a>
+  <a href="../"><p align="middle">Back to Homepage</p></a>
 
 <h2 align="middle">Overview</h2>
 <p>Rasterization is the cornerstone of rendering processes. 
